lintian (1.24.3) unstable; urgency=low

  * checks/debconf:
    + [ADB] Don't complain about unused debconf templates in udebs.
      (Closes: #491135)
  * checks/shared-libs.desc:
    + [ADB] Improve the description of no-symbols-control-file.

 -- 

lintian (1.24.2) unstable; urgency=low

  The "welcome Adam D. Barratt!" release.
  
  * checks/binaries.desc:
    + [ADB] Add some FHS references.  Thanks Jordà Polo.
  * checks/changelog-file{,.desc}:
    + [ADB] Add missing "use Dep". Thanks gregor herrmann (Closes: #488397)
    + [RA] Ignore "CNRI OPEN SOURCE GPL-COMPATIBLE LICENSE AGREEMENT" when
      looking for missing GPL references.  Thanks, Scott Kitterman.
      (Closes: #490264)
    + [ADB] Fix a typo in the description of syntax-error-in-debian-changelog.
      Thanks Jordà Polo.
  * checks/copyright-file{,.desc}:
    + [ADB] Check for over-long lines in copyright files.  (Closes: #479651)
  * checks/cruft{,.desc}:
    + [ADB] Check for BTS control directories in source packages and diffs
      in addition to the existing binary package checks.  (Closes: #481787)
  * checks/debconf{,.desc}:
    + [ADB] Warn about the use of "_Choices" in templates file and suggest
      using "__Choices" instead (Closes: #481152)
    + [ADB] Check all maintainer scripts for issues, rather than just config
      and postinst.
    + [ADB] Detect debconf templates which appear to be unused.
    + [ADB] Replace the {config,postinst}-loads-obsolete-confmodule tags
      with a new loads-obsolete-confmodule test which is used for all
      maintainer scripts and outputs the script name as part of its extra data.
  * checks/description{,.desc}:
    + [RA] Warn about duplicated words in the description.  Patch from
      Raphael Geissert.  (Closes: #424746)
  * checks/fields{,.desc}:
    + [FL] Do not complain about obsolete packages if there are
      non-obsolete alternatives specified and if the obsolete
      package is not listed first.  Issue an info tag for them