@@ -3,6 +3,9 @@ lintian (1.24.3) unstable; urgency=low
   * checks/debconf:
     + [ADB] Don't complain about unused debconf templates in udebs.
       (Closes: #491135)
+  * checks/description:
+    + [RA] Don't warn about a synopsis that ends in "etc."  Patch from
+      Chris Lamb.  (Closes: #491252)
   * checks/shared-libs.desc:
     + [ADB] Improve the description of no-symbols-control-file.
 
